tests/dataset/tpc-ds/compiler/rust/q83.error
rustc: exit status 1
warning: type `Sr_item` should have an upper camel case name
 --> /tmp/q83.rs:3:8
  |
3 | struct Sr_item {
  |        ^^^^^^^ help: convert the identifier to upper camel case: `SrItem`
  |
  = note: `#[warn(non_camel_case_types)]` on by default

warning: type `Cr_item` should have an upper camel case name
 --> /tmp/q83.rs:8:8
  |
8 | struct Cr_item {
  |        ^^^^^^^ help: convert the identifier to upper camel case: `CrItem`

warning: type `Wr_item` should have an upper camel case name
  --> /tmp/q83.rs:13:8
   |
13 | struct Wr_item {
   |        ^^^^^^^ help: convert the identifier to upper camel case: `WrItem`

error[E0308]: mismatched types
  --> /tmp/q83.rs:31:23
   |
31 |     assert!(result == 83 as f64);
   |             ------    ^^^^^^^^^ expected `i32`, found `f64`
   |             |
   |             expected because this is `i32`

error: aborting due to 1 previous error; 3 warnings emitted

For more information about this error, try `rustc --explain E0308`.
